fix footer header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -55,10 +55,6 @@ body {
 		align-items: center;
 		text-align: center;
 	}
-	.footer-header {
-		padding: 0 !important;
-		margin: 0 !important;
-	}
 	.header {
 		text-align: center;
 	}
@@ -87,8 +83,6 @@ body {
 	font-size: 20px;
 	color: #46494e;
 	text-transform: uppercase;
-	padding-right: 40px;
-	margin-right: 15px;
 	text-decoration: none;
 	font-weight: normal;
 }
